DMP-4635 Fix any outstanding PMD issues following DMP-4633 (#2682)