@@ -124,7 +124,7 @@ class AudioRequestsControllerPlaybackIntTest extends IntegrationBase {
                                                                                                         PLAYBACK_AUDIT_ACTIVITY_ID,
                                                                                                         fromDate, toDate);
 
-        assertEquals("2", auditEntities.get(0).getCourtCase().getCaseNumber());
+        assertEquals("2", auditEntities.getFirst().getCourtCase().getCaseNumber());
         assertEquals(1, auditEntities.size());
     }
 
