@@ -51,10 +51,10 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
     void testFindTransformedMediaWithId() {
         List<TransformedMediaEntity> transformedMediaEntityList
             = transformedMediaRepository.findTransformedMedia(
-            generatedMediaEntities.get(0).getMediaRequest().getId(),
+            generatedMediaEntities.getFirst().getMediaRequest().getId(),
             null, null, null, null, null, null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(0).getId(), transformedMediaEntityList.size());
+        Assertions.assertEquals(generatedMediaEntities.getFirst().getId(), transformedMediaEntityList.size());
     }
 
     @Test
@@ -63,7 +63,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             = transformedMediaRepository.findTransformedMedia(
             null, generatedMediaEntities.get(3).getMediaRequest().getHearing().getCourtCase().getCaseNumber(), null, null, null, null, null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(transformedMediaEntityList.get(0).getId(), generatedMediaEntities.get(3).getId());
+        Assertions.assertEquals(transformedMediaEntityList.getFirst().getId(), generatedMediaEntities.get(3).getId());
     }
 
     @Test
@@ -74,7 +74,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             null, null,
             TransformedMediaSubStringQueryEnum.COURT_HOUSE.getQueryStringPrefix(Integer.toString(nameMatchIndex)), null, null, null, null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -86,7 +86,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             TransformedMediaSubStringQueryEnum.COURT_HOUSE
                 .getQueryStringPrefix(Integer.toString(nameMatchIndex)).toUpperCase(Locale.getDefault()), null, null, null, null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -97,7 +97,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             null, null,
             TransformedMediaSubStringQueryEnum.COURT_HOUSE.getQueryStringPostfix(Integer.toString(nameMatchIndex)), null, null, null, null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -109,7 +109,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             TransformedMediaSubStringQueryEnum.COURT_HOUSE
                 .getQueryStringPostfix(Integer.toString(nameMatchIndex)).toUpperCase(Locale.getDefault()), null, null, null, null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -130,7 +130,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             null, null, null,
             generatedMediaEntities.get(3).getMediaRequest().getHearing().getHearingDate(), null, null, null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(3).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(3).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -141,7 +141,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             null, null, null, null,
             TransformedMediaSubStringQueryEnum.OWNER.getQueryString(Integer.toString(nameMatchIndex)), null, null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -153,7 +153,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             TransformedMediaSubStringQueryEnum.OWNER.getQueryStringPostfix(Integer.toString(nameMatchIndex)), null, null, null);
 
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -167,7 +167,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
                 .toLowerCase(Locale.getDefault()), null, null, null);
 
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -177,7 +177,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             = transformedMediaRepository.findTransformedMedia(
             null, null, null, null,
             TransformedMediaSubStringQueryEnum.OWNER.getQueryStringPostfix(Integer.toString(nameMatchIndex)), null, null, null);
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -188,7 +188,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             null, null, null, null,
             TransformedMediaSubStringQueryEnum.OWNER
                 .getQueryStringPostfix(Integer.toString(nameMatchIndex)).toUpperCase(Locale.getDefault()), null, null, null);
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -211,7 +211,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             null, null, null, null, null,
             TransformedMediaSubStringQueryEnum.REQUESTED_BY.getQueryString(Integer.toString(nameMatchIndex)), null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -222,7 +222,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             null, null, null, null, null,
             TransformedMediaSubStringQueryEnum.REQUESTED_BY.getQueryStringPrefix(Integer.toString(13)), null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -233,7 +233,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             null, null, null, null, null,
             TransformedMediaSubStringQueryEnum.REQUESTED_BY.getQueryStringPrefix(Integer.toString(13)).toUpperCase(Locale.getDefault()), null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -244,7 +244,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             null, null, null, null, null,
             TransformedMediaSubStringQueryEnum.REQUESTED_BY.getQueryStringPostfix(Integer.toString(13)), null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -255,7 +255,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             null, null, null, null, null,
             TransformedMediaSubStringQueryEnum.REQUESTED_BY.getQueryStringPostfix(Integer.toString(13)).toLowerCase(Locale.getDefault()), null, null);
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(generatedMediaEntities.get(nameMatchIndex).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -280,7 +280,7 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
             generatedMediaEntities.get(fromAtPosition).getMediaRequest().getCreatedDateTime());
         Assertions.assertEquals(1, transformedMediaEntityList.size());
         Assertions.assertEquals(generatedMediaEntities
-                                    .get(fromAtPosition).getId(), transformedMediaEntityList.get(0).getId());
+                                    .get(fromAtPosition).getId(), transformedMediaEntityList.getFirst().getId());
     }
 
     @Test
@@ -322,6 +322,6 @@ class TransformedMediaRepositoryTest extends PostgresIntegrationBase {
                                                               transformedMediaEntityFind.getMediaRequest()
                                                                   .getCreatedBy().getCreatedDateTime(), generatedMediaEntities.get(1).getCreatedDateTime());
         Assertions.assertEquals(1, transformedMediaEntityList.size());
-        Assertions.assertEquals(transformedMediaEntityFind.getId(), transformedMediaEntityList.get(0).getId());
+        Assertions.assertEquals(transformedMediaEntityFind.getId(), transformedMediaEntityList.getFirst().getId());
     }
 }
