@@ -141,6 +141,6 @@ public class MediaStub {
     @Transactional
     public Integer getHearingId(Integer id) {
         Optional<MediaEntity> mediaEntity = mediaRepository.findById(id);
-        return mediaEntity.get().getHearingList().get(0).getId();
+        return mediaEntity.get().getHearingList().getFirst().getId();
     }
 }
