@@ -143,7 +143,7 @@ class TranscriptionControllerUpdateTranscriptionAdminApprovedIntTest extends Int
         );
         assertEquals(
             "the comment",
-            dartsDatabase.getTranscriptionCommentRepository().findAll().get(0).getComment()
+            dartsDatabase.getTranscriptionCommentRepository().findAll().getFirst().getComment()
         );
         assertEquals(testUser.getId(), transcriptionWorkflowEntity.getWorkflowActor().getId());
     }
